# Mule-dev

./: README.in.md  README.md  README.md.in
Multiscale/: .cproject  .gitignore  .gitignore~  .project  .pydevproject  2D8_gradient_3x3.csv  CMakeLists.txt  CircularGeometryViewer.sh  CodingStyle.txt  GenerateCircularMovies.sh  Makefile  Multiscale.doxyfile  README.txt  RectangularGeometryViewer.sh  RectangularPlot.sh  RunCircularGeometryViewer.sh  RunCircularRegionDetector.sh  RunRectangularGeometryEntityViewer.sh  RunRectangularGeometryViewer.sh  RunRectangularRegionDetector.sh  RunSimulationDetectClusters.sh  circular_plot.sh  gmon.out  rectangular_plot.sh  tmp.xml
Multiscale/cmake/modules/: AddSample.cmake  AddUnitTest.cmake  FindXerces.cmake  GenerateCustomModelChecker.cmake  GetCurrentDate.cmake  IncrementDoxygenBuildNumber.cmake  UpdateProjectBuildNumber.cmake  UpdateProjectModifiedDate.cmake
Multiscale/cmake/package/: CMakeLists.txt  CPackConfig.cmake
Multiscale/data/test/: .gitignore  circular_.out  dicty_shapes2_.out  phase_variation_in_space4_61x61_trace2_101.in  phase_variation_in_space4_61x61_trace3_2_101.out  phase_variation_in_space4_61x61_trace4_101.in  phase_variation_in_space4_61x61_trace4_101.out  rectangular_.out  tmp.out
Multiscale/doc/: Multiscale.doxyfile  Multiscale.doxyfile.in  Multiscale.in.doxyfile
Multiscale/doc/config/: mainpage.dox
Multiscale/doc/html/: AnnularSector_8cpp.html  AnnularSector_8cpp.js  AnnularSector_8cpp__incl.dot  AnnularSector_8cpp__incl.map  AnnularSector_8cpp__incl.md5  AnnularSector_8cpp_source.html  AnnularSector_8hpp.html  AnnularSector_8hpp__dep__incl.dot  AnnularSector_8hpp__dep__incl.map  AnnularSector_8hpp__dep__incl.md5  AnnularSector_8hpp__incl.dot  AnnularSector_8hpp__incl.map  AnnularSector_8hpp__incl.md5  AnnularSector_8hpp_source.html  CartesianToConcentrationsConverterException_8hpp.html  CartesianToConcentrationsConverterException_8hpp__dep__incl.map  CartesianToConcentrationsConverterException_8hpp__dep__incl.md5  CartesianToConcentrationsConverterException_8hpp__incl.map  CartesianToConcentrationsConverterException_8hpp__incl.md5  CartesianToConcentrationsConverterException_8hpp_source.html  CartesianToConcentrationsConverter_8cpp.html  CartesianToConcentrationsConverter_8cpp__incl.dot  CartesianToConcentrationsConverter_8cpp__incl.map  CartesianToConcentrationsConverter_8cpp__incl.md5  CartesianToConcentrationsConverter_8cpp_source.html  CartesianToConcentrationsConverter_8hpp.html  CartesianToConcentrationsConverter_8hpp.js  CartesianToConcentrationsConverter_8hpp__dep__incl.dot  CartesianToConcentrationsConverter_8hpp__dep__incl.map  CartesianToConcentrationsConverter_8hpp__dep__incl.md5  CartesianToConcentrationsConverter_8hpp__incl.dot  CartesianToConcentrationsConverter_8hpp__incl.map  CartesianToConcentrationsConverter_8hpp__incl.md5  CartesianToConcentrationsConverter_8hpp_source.html  CartesianToPolarConverterException_8hpp.html  CartesianToPolarConverterException_8hpp__dep__incl.map  CartesianToPolarConverterException_8hpp__dep__incl.md5  CartesianToPolarConverterException_8hpp__incl.map  CartesianToPolarConverterException_8hpp__incl.md5  CartesianToPolarConverterException_8hpp_source.html  (+2325 more)
Multiscale/doc/latex/: AnnularSector_8cpp.tex  AnnularSector_8cpp__incl.dot  AnnularSector_8cpp__incl.md5  AnnularSector_8hpp.tex  AnnularSector_8hpp__dep__incl.dot  AnnularSector_8hpp__dep__incl.md5  AnnularSector_8hpp__incl.dot  AnnularSector_8hpp__incl.md5  CartesianToConcentrationsConverterException_8hpp.tex  CartesianToConcentrationsConverterException_8hpp__dep__incl.md5  CartesianToConcentrationsConverterException_8hpp__incl.md5  CartesianToConcentrationsConverter_8cpp.tex  CartesianToConcentrationsConverter_8cpp__incl.dot  CartesianToConcentrationsConverter_8cpp__incl.md5  CartesianToConcentrationsConverter_8hpp.tex  CartesianToConcentrationsConverter_8hpp__dep__incl.dot  CartesianToConcentrationsConverter_8hpp__dep__incl.md5  CartesianToConcentrationsConverter_8hpp__incl.dot  CartesianToConcentrationsConverter_8hpp__incl.md5  CartesianToPolarConverterException_8hpp.tex  CartesianToPolarConverterException_8hpp__dep__incl.md5  CartesianToPolarConverterException_8hpp__incl.md5  CartesianToPolarConverter_8cpp.tex  CartesianToPolarConverter_8cpp__incl.dot  CartesianToPolarConverter_8cpp__incl.md5  CartesianToPolarConverter_8hpp.tex  CartesianToPolarConverter_8hpp__dep__incl.dot  CartesianToPolarConverter_8hpp__dep__incl.md5  CartesianToPolarConverter_8hpp__incl.dot  CartesianToPolarConverter_8hpp__incl.md5  CircularDetectRegions_8cpp.tex  CircularDetectRegions_8cpp__incl.md5  CircularDetectRegions_8cpp_a0252b9797b85fbd6f2de246ac5e72a7d_cgraph.md5  CircularDetectRegions_8cpp_a0c6ea854096d0cb7031c2af1eeb58228_icgraph.md5  CircularDetectRegions_8cpp_a3c04138a5bfe5d72780bb7e82a18e627_cgraph.md5  CircularDetectRegions_8cpp_a49535fad6e4e5f21ee2eae91dff5a831_icgraph.md5  CircularMatFactoryException_8hpp.tex  CircularMatFactoryException_8hpp__dep__incl.md5  CircularMatFactoryException_8hpp__incl.md5  CircularMatFactorySample_8cpp.tex  (+814 more)
Multiscale/include/: AnnularSector.hpp  CartesianToPolarConverter.hpp  CsvToInputFilesConverter.hpp  GnuplotScriptGenerator.hpp  RGBColourGenerator.hpp  StringManipulator.hpp
Multiscale/modules/: CMakeLists.txt
Multiscale/modules/analysis/: CMakeLists.txt
Multiscale/modules/util/: CMakeLists.txt
Multiscale/modules/verification/: CMakeLists.txt
Multiscale/script/: AnalyseDictyosteliumSimulations.sh  GetDictyosteliumCAMP_oFromResults.sh  GetDictyosteliumPositionsFromResults.sh
Multiscale/src/: AnnularSector.cpp  CartesianToPolarConverter.cpp  CircularSegment.cpp  CsvToInputFilesConverter.cpp  GnuplotScriptGenerator.cpp  LexicographicNumberIterator.cpp  MapCartesianToPolar.cpp  MapCsvToInputFiles.cpp  NumericRangeManipulator.cpp  StringManipulator.cpp
Multiscale/test/: CircularMatFactoryTest.cpp  ColourTest.cpp  Geometry2DTest.cpp  LexicographicIteratorTest.cpp  LineCircleIntersectionSample.cpp  MatReaderTest.cpp  RectangularMatFactoryTest.cpp
(+1304 files in other folders)
