#------------------------------------------------------------
# Add include directories
#------------------------------------------------------------

include_directories(util/include)


#------------------------------------------------------------
# Add subdirectories
#------------------------------------------------------------

add_subdirectory(analysis)
add_subdirectory(util)
add_subdirectory(verification)
add_subdirectory(visualisation)

